<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Header -->

    <!-- Pet Image -->

    <TextView
        android:id="@+id/create_pet_header"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="#B64931"
        android:gravity="bottom|start"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/create_pet_profile"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photo_preview"
        android:layout_width="125dp"
        android:layout_height="113dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/pet_image_description"
        android:src="@drawable/ic_pet_placeholder" />


    <!-- Pet Name -->

    <Button
        android:id="@+id/Upload_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo"
        android:layout_gravity="center" />


    <EditText
        android:id="@+id/et_pet_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/pet_name_hint"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Pet Type -->
    <Spinner
        android:id="@+id/spinner_pet_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:prompt="@string/choose_pet_type"/>

    <!-- Pet Birth Date -->
    <EditText
        android:id="@+id/et_pet_dob"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/pet_birth_date_hint"
        android:inputType="date"
        android:autofillHints="birthDate"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Create Button -->
    <Button
        android:id="@+id/btn_create_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_button_text" />

</LinearLayout>
